--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/
+    - assets/auth/
+    - assets/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
