--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   intl: ^0.16.1 #dil için
   email_validator: '^1.0.0' # mail adresi kontrolleri için
 
+  http: ^0.12.2 #Restfull için
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
