--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,15 @@ dependencies:
   flutter_localizations: #dil için
       sdk: flutter
   intl: ^0.16.1 #dil için
+
   email_validator: '^1.0.0' # mail adresi kontrolleri için
 
   http: ^0.12.2 #Restfull için
+
+  shared_preferences: ^0.5.12+4 #local storage # kullanıcı bilgileri veya diğer bilgileri tutmak için.
+
+  fluttertoast: ^7.1.6 # Toast # https://pub.dev/packages/fluttertoast
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
